# BALROG

./: .gitignore  eval.py  evolve.py  explore.py  explore_2step_evolve_h.py  explore_evolve.py  explore_evolve_h.py  improve.py  improve_old.py  perc.py  perc_evolve.py  pyproject.toml  setup.py
balrog/: client.py  evaluator.py  pricing.py  utils.py
balrog/agents/: chain_of_thought.py  custom.py  few_shot.py  naive.py  plan_memory_agent.py  robust_cot.py  robust_naive.py
balrog/config/: config.yaml
balrog/environments/: __init__.py
balrog/environments/minihack/: __init__.py  minihack_env.py
balrog/environments/nle/: __init__.py  base.py  nle_env.py  progress.py
balrog/prompt_builder/: history.py
balrog/tests/: test_language_obs_toggle.py
instruction/: minihack_quest_manual.txt  minihack_quest_simple.txt
